# serde-scale

./: Cargo.toml  LICENSE  README.md
serde-scale-tests/: Cargo.toml
serde-scale-tests/src/: lib.rs
serde-scale-tests/tests/: conformance.rs
src/: de.rs  err.rs  lib.rs  read.rs  ser.rs  write.rs
